# ai-agent-lab

./: .gitignore  chunk_processor.py  context_manager.py  llm_client.py  main.py  models.py  pyproject.toml
backend/: chunk_processor.py  chunker.py  context_manager.py  embeddings.py  llm_client.py  main.py  rag_pipeline.py  structured_output.py  token_utils.py  tools.py  vector_store.py
frontend/: index.html  package-lock.json
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: ChatBox.vue
frontend/src/views/: HomeView.vue
